[tool.poetry]
name = "isopropanol"
version = "0.1.0"
description = ""
authors = ["HowardLovekraft <117375241+HowardLovekraft@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {extras = ["i18n"], version = "^3.4.1"}
python-dotenv = "^1.0.1"
aiogram-dialog = "^2.1.0"
psycopg = "^3.1.18"
icecream = "^2.1.3"
redis = "^5.0.3"
psycopg-binary = "^3.1.18"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
